--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ script:
   - composer check-style
 
 before_deploy:
+  - composer build
   - unzip -qo release/disable-rest-api-jailbreak.zip -d build
 
 deploy:
